--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,13 @@
     <link rel="stylesheet" type="text/css" href="./styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <nav>
         <button>First</button>
         <button>Second</button>
         <button>Third</button>
+        <button>Fourth</button>
     </nav>
     <div class="main">
         <div class="center">
@@ -20,4 +23,5 @@
     <script type='text/javascript' src="./word_list.js"></script>
     <script type="text/javascript" src="./front.js"></script>
 </body>
+
 </html>
