--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,15 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./styles.css">
-    <title>Document</title>
+    <title>Wordle - Clone</title>
 </head>
 
 <body>
     <nav>
-        <button>First</button>
-        <button>Second</button>
-        <button>Third</button>
-        <button>Fourth</button>
+        <p>Wordle Clone</p>
     </nav>
     <div class="main">
         <div class="center">
