--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,9 +14,9 @@
         <p>Wordle Clone</p>
     </nav>
     <div class="main">
-        <div class="center">
-        </div>
+        <div class="center"></div>
     </div>
+    <div class="lower"></div>
     <script type='text/javascript' src="./word_list.js"></script>
     <script type="text/javascript" src="./front.js"></script>
 </body>
